fixed responsive spacing of projects

--- a/frontend/src/styles/Projects.css
+++ b/frontend/src/styles/Projects.css
@@ -1,25 +1,28 @@
 .project-grid {
-    --row-gap: 120px;
-    --col-gap: 50px;
+    --row-gap: 80px;
+    --col-gap: 30px;
     --num-cols: 3;
-    --row-height: 250px;
 
-    box-sizing: border-box;
     padding: var(--gap);
 
     display: grid;
     grid-template-columns: repeat(var(--num-cols), 1fr);
-    grid-auto-rows: var(--row-height);
     grid-gap: var(--row-gap) var(--col-gap);
 
 
 }
 
+.project-grid {
+    margin-left: 5em;
+    margin-right: 5em;
+}
+
 .project-grid img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
-    transition: transform 0.3s ease;
+    border-radius: 10px;
+    max-height: 200px;
 }
 
 .project-links {
@@ -35,9 +38,18 @@
     color: white;
     text-decoration: none;
     border: 2px solid white;
+    border-radius: 5px;
     padding: 5px 10px;
     margin: 5px 10px;
+    transition: transform 0.3s ease;
+    cursor: pointer;
 }
+
+.project-link-button:hover {
+    transform: scale(1.1);
+}
+
+
 
 .project-title {
     display: inline-block;
@@ -47,4 +59,26 @@
 
 .project-short-descrip {
     font-size: 0.9em;
+    margin-bottom: 10px;
+}
+
+
+/* screen smaller than 1200px */
+@media screen and (max-width: 1200px) {
+    .project-grid {
+        --num-cols: 2;
+        margin-left: 3em;
+        margin-right: 3em;
+    }
+}
+
+/* screen smaller than 700px */
+@media screen and (max-width: 700px) {
+    .project-grid {
+        --num-cols: 1;
+        margin-left: 3em;
+        margin-right: 3em;
+        --row-gap: 1em;
+
+    }
 }
